# estate

./: .gitignore  CMakeLists.txt  ENEMY_ORGANIZATION_GUIDE.md  README.md  WEAPON_SYSTEM_USAGE.md  build.sh  generate_backgrounds.py
.cursor/rules/: configuration-system.mdc  development-workflow.mdc  game-architecture.mdc  project-overview.mdc
assets/: README.md
assets/backgrounds/: README.md
src/: background.cpp  background.h  background_menu.cpp  background_menu.h  config.h  enemy.cpp  enemy.h  gold_drop.cpp  gold_drop.h  gold_manager.cpp  gold_manager.h  health_pack.cpp  health_pack.h  main.cpp  minimap.cpp  minimap.h  player.cpp  player.h  shop.cpp  shop.h  talent.cpp  talent.h  weapon.cpp  weapon.h  weapon_selection.cpp  weapon_selection.h  weapon_tier_system.cpp  weapon_tier_system.h
src/backgrounds/: background_factory.cpp  background_factory.h  background_types.cpp  background_types.h
src/enemies/: basic_enemies.cpp  basic_enemies.h  combat_enemies.cpp  combat_enemies.h  enemy_factory.cpp  enemy_factory.h  special_enemies.cpp  special_enemies.h
src/talents/: README.md  combat_talents.cpp  combat_talents.h  defensive_talents.cpp  defensive_talents.h  talent_factory.cpp  talent_factory.h  utility_talents.cpp  utility_talents.h
src/weapons/: README.md  melee_weapons.cpp  melee_weapons.h  ranged_weapons.cpp  ranged_weapons.h  weapon_factory.cpp  weapon_factory.h
